app/assets/stylesheets/registries.scss
// Place all the styles related to the Registries controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
div.container.registry {
  padding: 0 1.5em 0 1.5em;
}

.registry-title {
  padding: 230px 0 20px 0;
  font-weight: bold;
}

div.registry-page-about {
  padding-top: 1.12em !important;
}

.about{
  font-size: 0.93em;
}

.form-group.col.double-input {
  margin-right: 1.25em;
}

.page-header p.registry-title {
  font-size: 1.4em;
  font-weight: 600; 
}

div.form-row {
  margin-bottom: 0.5em;
}

.btn-sm.next {
  font-size: 0.8em;
}

a.back-link {
  font-size: 0.9em;
}

select.form-control {
  font-size: 0.9em;
  margin-top: 0.6em;
}

div.check-box {
  font-size: 0.8em;
}

.datepicker {
  margin-top: 0.55em;
}

input#registry_shower_date {
  height: 2.2em;
}

select.form-control.state {
  margin-top: 0;
  height: 2.7em;
}

div.shipping-check-box {
  font-size: 0.7em;
  margin-top: 0.6em;
}

.selection-info {
  padding: 1em 0 1em 0.93em;
}

div.row.registry-row {
  margin: 0;
}

div.form-group#search_box {
  padding-bottom: 3em;
}
.show-registry {
  padding-top: 2em;
  padding-bottom:2em;
}

div.col-6.show-registry {
  text-align: left;
}

div.col-3.show-registry {
  text-align: right;
}

#registry-name {
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 0.2em;
}

#registry-due {
  font-size: 1em;
  margin-bottom: 0;
}

div.col-4.show-registry {
  padding-right: 0;
  text-align: right;
}

a.btn.btn-primary.btn-sm.select-reg {
  background: #FF4A92 !important;
  font-size: 0.8em;
  color: white;
  padding: 0.5em;
}

